# CPE810C_2016F_XDF

./: .gitignore  CMakeLists.txt  DigitialSignature  Display of FramAndText.eddx  Final Presentation Links  FrameAndText.pro  Group Presentation Link  Image.7z  Image.pro  Initial Design.txt  PrintREADME.md  Project.pro  QImage  QImage.cpp  QtTest.pro  README  README.md  Steps of programming.txt  Test.cpp  XDF-2.pro  XUnzip.cpp  XUzip.h  ZHead.cpp  ZHead.h  bodyandcss.cpp  bodytrans 0.9.cpp  bodytrans VER0.9.cpp  border.cpp  border.h  catch body.cpp  common.h  content.cpp  content.h  contributer.txt  contributors.txt  dialog.cpp  dialog.ui  finalProj.pro  frame.cpp  frame.h  (+54 more)
2dgraphics/: 3rdWeekIsNotLowCaseChar.cc  3rdWeekIsNotLowCaseChar.hh  3rdWeekOperatorDicTrie.cc  3rdWeekOperatorDicTrie.hh  3rdWeekShape.cc  3rdWeekShape.hh  CMakeLists.txt  GraphicFormatInPDF.txt  README  drawfunlist.h  exceptionoptdic.cpp  exceptiontwodg.cpp  readpdfdata.cpp  readpdfdata_ver2.cpp
Frame and Text/: FrameAndText.pro  border.cpp  border.h  characterstyle.cpp  characterstyle.h  content.cpp  content.h  font.cpp  font.h  frame.cpp  frame.h  importmessage.cpp  importmessage.h  main.cpp  mainwindow.cpp  mainwindow.h  myfont.cpp  myfont.h  page.cpp  page.h  read.cpp  read.h  sample.cpp  samplefile.html  samplefont.txt  samplereturn.txt  sampletext.txt  text.cpp  text.h  textline.cpp  textline.h
Frame_UI/: contributors.txt
Print/: QtTest.pro  TODOlist.txt  dialog.cpp  dialog.h  dialog.ui  frame.cpp  frame.h  image.h  includes.hh  page.cpp  page.h  pframe.cpp  pframe.h  ppage.cpp  ppage.h  ppaint.h  pprint.cpp  pprint.hh  printReadme.txt
Print_runnable/: QtTest.pro  README.md  TODOlist.txt~  includes.hh  main.cpp  pprint.cpp  pprint.hh
Signature/: DoNotReadMe  FunctionDemo.cpp  UI_logic.cpp  Updata1120.txt  mainwindow.cpp  mainwindow.ui  mainwindow1120.cpp  mainwindow1120.ui  readme
ang_sun/: Project.pro  framepainter.cpp  framepainter.h  inputdialog.cpp  inputdialog.h  inputdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+3 more)
pdf/pdfimport/: CMakeLists.txt  main.cpp  pdfgraphics.cpp  pdfgraphics.h  pdfimage.cpp  pdfimage.h  pdfimport.cpp  pdfimport.h
pdf/podofo/tools/xdfimport/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  import.cpp  main.cpp  pdfgraphics.cpp  pdfgraphics.h  pdfgstate.cpp  pdfgstate.h  pdfimage.cpp  pdfimage.h  xdfimport  xdfimport.cpp  xdfimport.h
test/: CMakeLists.txt  testgraphics.cpp
(+385 files in other folders)
